--- a/bookingApp/templates/base.html
+++ b/bookingApp/templates/base.html
@@ -75,8 +75,8 @@
 
 
 
-    <footer class="ftco-footer">
-      <div class="container">
+    <footer class="ftco-footer " style="background:black">
+      <div class="container ">
         <div class="row mb-5">
           
           <div class="col-sm-12 col-md">
@@ -103,7 +103,7 @@
           
           <div class="col-sm-12 col-md">
             <div class="ftco-footer-widget mb-4">
-            	<h2 class="ftco-heading-2">Have a Questions?</h2>
+            	<h2 class="ftco-heading-2">Contact</h2>
             	<div class="block-23 mb-3">
 	              <ul>
 	                <li><span class="icon fa fa-map marker"></span><span class="text"><a href = "https://goo.gl/maps/E8auw2x65vDJWuYr7">Legon Boundary, Accra</a></span></li>
@@ -119,9 +119,9 @@
       		<div class="row">
 	          <div class="col-md-12">
 		
-	            <p class="mb-0" style="color: rgba(255,255,255,.5);"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-	  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart color-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib.com</a>
-	  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
+	            <p class="mb-0" style="color: rgba(255,255,255,.5);">
+	  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved |
+	  </p>
 	          </div>
 	        </div>
       	</div>
