--- a/bookingApp/templates/counselor.html
+++ b/bookingApp/templates/counselor.html
@@ -27,7 +27,8 @@
 			<div class="img align-self-stretch" style="background-image: url({% static 'media/download.png' %} );"></div>
 							{% endif %}
 							</div>
-							<div class="text pt-3 px-3 pb-4 text-center" >
+							<div   class="text pt-3 px-3 pb-4 text-center"  style = "height: 250px;" >
+								<center>
 								<h3>{{object.firstName}}</h3>
 								<span class="position mb-2">{{object.status}}</span>
 								<div class="faded" >
@@ -42,7 +43,7 @@
 		              </ul>
 	              </div>
 				 <button type="button" class="btn btn-primary">BOOK</button>
-				
+				</center>
 				</div>
 				  	
 						</div>
