--- a/bookingApp/templates/index.html
+++ b/bookingApp/templates/index.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}{% load static %}
 {% block content %}
-    <div class="hero-wrap" style="background-image: url({% static 'images/bg_1.jpg'%});" data-stellar-background-ratio="0.5">
+    <div class="hero-wrap" style="background-image: url({% static 'images/#'%});" data-stellar-background-ratio="0.5">
       <div class="overlay"></div>
       <div class="container">
         <div class="row no-gutters slider-text align-items-center">
@@ -123,7 +123,7 @@
     <section class="ftco-section ftco-no-pb ftco-no-pt">
 			<div class="container">
 				<div class="row">
-					<div class="col-md-6 img img-3 d-flex justify-content-center align-items-center" style="background-image: url({% static 'images/about-1.jpg'%});">
+					<div class="col-md-6 img img-3 d-flex justify-content-center align-items-center" style="background-image: url({% static 'images/university-of-ghana-legon.jpg'%});">
 					</div>
 					<div class="col-md-6 wrap-about px-md-5 ftco-animate py-5 bg-light">
 	          <div class="heading-section">
@@ -174,40 +174,40 @@
 						    <a class="nav-link py-4" data-toggle="tab" href="#services-5">Personal Problem</a>
 						  </li>
 						  <li class="nav-item text-left">
-						    <a class="nav-link py-4" data-toggle="tab" href="#services-6">Business Problem</a>
+						    <a class="nav-link py-4" data-toggle="tab" href="#services-6">Financial Problem</a>
 						  </li>
 						</ul>
 					</div>
 					<div class="col-md-8">
 						<div class="tab-content">
 						  <div class="tab-pane container p-0 active" id="services-1">
-						  	<div class="img" style="background-image: url({% static 'images/services-1.jpg'%});"></div>
+						  	<div class="img" style="background-image: url({% static 'images/dist.jfif'%});"></div>
 						  	<h3><a href="#">Academic Problem</a></h3>
 						  	<p></p>
 						  </div>
 						  <div class="tab-pane container p-0 fade" id="services-2">
-						  	<div class="img" style="background-image: url({% static 'images/services-2.jpg'%});"></div>
+						  	<div class="img" style="background-image: url({% static 'images/admissionsHomePage.png'%});"></div>
 						  	<h3><a href="#">Couples Counseling</a></h3>
 						  	<p></p>
 						  </div>
 						  <div class="tab-pane container p-0 fade" id="services-3">
-						  	<div class="img" style="background-image: url({% static 'images/services-3.jpg'%});"></div>
+						  	<div class="img" style="background-image: url({% static 'images/untitled.png'%});"></div>
 						  	<h3><a href="#">Depression Treatment</a></h3>
 						  	<p></p>
 						  </div>
 						  <div class="tab-pane container p-0 fade" id="services-4">
-						  	<div class="img" style="background-image: url({% static 'images/services-4.jpg'%});"></div>
+						  	<div class="img" style="background-image: url({% static 'images/university-of-ghana-legon.webp'%});"></div>
 						  	<h3><a href="#">Family Problems</a></h3>
 						  	<p></p>
 						  </div>
 						  <div class="tab-pane container p-0 fade" id="services-5">
-						  	<div class="img" style="background-image: url({% static 'images/services-5.jpg'%});"></div>
+						  	<div class="img" style="background-image: url({% static 'images/gate.jpg'%});"></div>
 						  	<h3><a href="#">Personal Problem</a></h3>
 						  	<p></p>
 						  </div>
 						  <div class="tab-pane container p-0 fade" id="services-6">
-						  	<div class="img" style="background-image: url({% static 'images/services-6.jpg'%});"></div>
-						  	<h3><a href="#">Business Problem</a></h3>
+						  	<div class="img" style="background-image: url({% static 'images/legon.jfif'%});"></div>
+						  	<h3><a href="#">Financial Problem</a></h3>
 						  	<p></p>
 						  </div>
 						</div>
@@ -223,8 +223,8 @@
       <div class="container">
         <div class="row justify-content-center mb-5">
           <div class="col-md-7 text-center heading-section heading-section-white ftco-animate">
-          	<span class="subheading">Testimonial</span>
-            <h2 class="mb-3">Happy Clients</h2>
+          	<span class="subheading">Quotes</span>
+            <h2 class="mb-3">Positive Mind set</h2>
           </div>
         </div>
         <div class="row ftco-animate">
@@ -236,10 +236,9 @@
                 <div class="text">
                     <p class="mb-4"></p>
                     <div class="d-flex align-items-center">
-                    <div class="user-img" style="background-image: url({% static 'images/person_1.jpg'%})"></div>
                     	<div class="pl-3">
-		                    <p class="name">Roger Scott</p>
-		                    <span class="position">Marketing Manager</span>
+		                    <p class="name">“When you have a dream, you’ve got to grab it and never let go.”</p>
+		                    <span class="position">Carol Burnett</span>
 		                  </div>
 	                  </div>
                   </div>
@@ -305,30 +304,5 @@
     	</div>
     </section>
 
-    <section class="ftco-section">
-      <div class="container">
-       
-        <div class="row d-flex">
-          <div class="col-md-4 d-flex ftco-animate">
-          	<div class="blog-entry justify-content-end">
-              <div class="text text-center">
-              	<a href="#" class="block-20 img" style="background-image: url({% static 'images/image_1.jpg'%});">
-	              </a>
-	              <div class="meta text-center mb-2 d-flex align-items-center justify-content-center">
-                	<div>
-                		<span class="day">18</span>
-                		<span class="mos">April</span>
-                		<span class="yr">2020</span>
-                	</div>
-                </div>
-                <h3 class="heading mb-3"></h3>
-                <p></p>
-              </div>
-            </div>
-          </div>
-          
-          
-        </div>
-      </div>
-    </section>	
+   
 {% endblock %}
