--- a/bookingApp/templates/base.html
+++ b/bookingApp/templates/base.html
@@ -21,27 +21,26 @@
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
   </head>
   <body>
-
-  	<div class="wrap"style="background:#281564">
+{% for student in students%}
+{% if pk == student.student_id %}
+  	<div class="wrap"style="background:#281564;">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-10 d-flex align-items-center" >
-						<p style="color: white;padding-right:2%;">
-							user_pic
-						</p>
-            <p style="color: white">
-							user_id
+            <p style="color: white;padding-top:1%;padding-left:1%;">
+							{{student.student_id}}
 						</p>
 					</div>
-			<div class="col-md-1 ">
+			<div class="col-md-1" style="padding-top:8px">
         <center>	
-<a href="#"style="color: white;" >Logout</a>
+<a href="{% url 'bookingUrls:logout' pk %}" style="color: white;" >Logout</a>
         </center>
 					</div>
 				</div>
 			</div>
 		</div>
-    
+    {% else %}{% endif%}
+    {% endfor %}
 	  <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 	    <div class="container">
 	      <a class="navbar-brand" href="index.html">Counselor</a>
@@ -51,7 +50,7 @@
 
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
-          <li class="nav-item"><a href="{% url 'bookingUrls:indexPage'%}" class="nav-link">Home</a></li>
+          <li class="nav-item"><a href="{% url 'bookingUrls:indexPage' pk %}" class="nav-link">Home</a></li>
           {% comment %} <li class="nav-item"><a href="{% url 'bookingUrls:aboutPage'%}" class="nav-link">About</a></li> {% endcomment %}
           <li class="nav-item"><a href="{% url 'bookingUrls:counselorPage'%}" class="nav-link">Counselors</a></li>
           {% comment %} <li class="nav-item"><a href="{% url 'bookingUrls:servicesPage'%}" class="nav-link">Services</a></li> {% endcomment %}
