--- a/counsellingApp/templates/app/home.html
+++ b/counsellingApp/templates/app/home.html
@@ -30,55 +30,8 @@
     <div class="navigation">
       {% for object in objects %} {% if object.user_id == pk|add:0 %}
       <!---->
-      {% if object.status == 'STUDENT'%}
-
-      <ul>
-        <li>
-          <a href="{% url 'counsellingUrls:indexPage' pk 'home' %}">
-            <span class="icon" style = "color:{{home}}"><ion-icon name="home-outline"></ion-icon></span>
-            <span class="title">Home</span>
-          </a>
-        </li>
-
-        <li>
-          <a href="{% url 'counsellingUrls:notificationPage' pk 'notify'%}">
-            <span class="icon" style = "color:{{notify}}"
-              ><ion-icon name="chatbubble-ellipses-outline"></ion-icon>
-            </span>
-            <span class="title">Notifications</span>
-          </a>
-        </li>
-
-        <li>
-          <a href="{% url 'counsellingUrls:profilePage' pk 'profile' %}">
-            <span class="icon" style = "color:{{profile}}"><ion-icon name="cloud-outline"></ion-icon></span>
-            <span class="title">Profile</span>
-          </a>
-        </li>
-
-         <li>
-          <a
-            href="www.universtyofghana.com"
-          >
-            <span class="icon"
-              ><ion-icon name="cloud-outline"></ion-icon></ion-icon
-            ></span>
-            <span class="title">UG WEBSITE</span>
-          </a>
-        </li>
-
-        <li>
-          <a
-            href="https://maps.google.com/maps/ms?ie=UTF8&hl=en&msa=0&ll=5.651967,-0.188441&spn=0.005466,0.010042&t=h&z=17&om=1&msid=114140572394999445956.000441bd2615d34504d68&mid=1333430664&showlabs=1"
-          >
-            <span class="icon"
-              ><ion-icon name="navigate-outline"></ion-icon
-            ></span>
-            <span class="title">UG MAP</span>
-          </a>
-        </li>
-      </ul>
-      {% elif object.status == 'COUNSELLOR'%}
+      
+      {% if object.status == 'COUNSELLOR'%}
       <ul>
         <li>
           <a href="{% url 'counsellingUrls:adminPage' pk 'dashboard'%}">
@@ -111,6 +64,15 @@
             <span class="title">Profile</span>
           </a>
         </li>
+
+        <li>
+          <a href="{% url 'counsellingUrls:website'  %}">
+            <span class="icon" style = "color:white"
+              ><ion-icon name="globe"></ion-icon></span>
+            <span class="title">UGCounselling</span>
+          </a>
+        </li>
+
 
         <li>
           <a
