--- a/bookingApp/templates/index.html
+++ b/bookingApp/templates/index.html
@@ -11,7 +11,7 @@
 	            <p><a href="{% url 'bookingUrls:contactPage'%}" class="btn btn-primary py-3 px-4">Contact us</a></p>
             </div>
           </div>
-          <a href="#" class="img-video popup-vimeo d-flex align-items-center justify-content-center">
+          <a href="{% static 'videos/Legon University Ghana from the Sky.mp4' %}" class="img-video popup-vimeo d-flex align-items-center justify-content-center">
           	<span class="fa fa-play"></span>
           </a>
         </div>
