--- a/bookingApp/templates/base.html
+++ b/bookingApp/templates/base.html
@@ -43,7 +43,7 @@
     {% endfor %}
 	  <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 	    <div class="container">
-	      <a class="navbar-brand" href="index.html">Counselor</a>
+	      <a class="navbar-brand" href="{% url 'bookingUrls:indexPage' pk %}">Counselor</a>
 	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="oi oi-menu"></span> Menu
 	      </button>
