--- a/counsellingApp/templates/app/home.html
+++ b/counsellingApp/templates/app/home.html
@@ -130,176 +130,22 @@
           </a>
         </li>
 
-        <li>
-          <a
-            href="https://maps.google.com/maps/ms?ie=UTF8&hl=en&msa=0&ll=5.651967,-0.188441&spn=0.005466,0.010042&t=h&z=17&om=1&msid=114140572394999445956.000441bd2615d34504d68&mid=1333430664&showlabs=1"
-          >
-            <span class="icon"
-              ><ion-icon name="navigate-outline"></ion-icon
-            ></span>
-            <span class="title">UG MAP</span>
+         <li>
+          <a href="{% url 'counsellingUrls:website'  %}">
+            <span class="icon" style = "color:white"
+              ><ion-icon name="globe"></ion-icon></span>
+            <span class="title">UGCounselling</span>
           </a>
         </li>
+
+
+
+       
       </ul>
       {% else %} {% endif %}
       <!---->
       {% else %}{% endif %}{% endfor %}
       <!---->
-
-      {% for student in students %}
-      <!---->
-      {% if student.student_id == pk|add:0 %}<!---->
-      {% if student.status == 'STUDENT'%}
-
-      <ul>
-        <li>
-          <a href="{% url 'counsellingUrls:indexPage' pk 'home' %}">
-            <span class="icon" style = "color:{{home}}" ><ion-icon name="home-outline"></ion-icon></span>
-            <span class="title">Home</span>
-          </a>
-        </li>
-
-        <li>
-          <a href="{% url 'counsellingUrls:notificationPage' pk 'notify'%}">
-            <span class="icon" style = "color:{{notify}}"
-              ><ion-icon name="chatbubble-ellipses-outline"></ion-icon>
-            </span>
-            <span class="title">Notifications</span>
-          </a>
-        </li>
-
-        <li>
-          <a href="{% url 'counsellingUrls:profilePage' pk 'profile'%}">
-            <span class="icon" style = "color:{{profile}}"><ion-icon name="cloud-outline"></ion-icon></span>
-            <span class="title">Profile</span>
-          </a>
-        </li>
-
-        <li>
-          <a
-            href="www.universtyofghana.com"
-          >
-            <span class="icon"
-              ><ion-icon name="cloud-outline"></ion-icon
-            ></span>
-            <span class="title">UG WEBSITE</span>
-          </a>
-        </li>
-
-        <li>
-          <a
-            href="https://maps.google.com/maps/ms?ie=UTF8&hl=en&msa=0&ll=5.651967,-0.188441&spn=0.005466,0.010042&t=h&z=17&om=1&msid=114140572394999445956.000441bd2615d34504d68&mid=1333430664&showlabs=1"
-          >
-            <span class="icon"
-              ><ion-icon name="navigate-outline"></ion-icon
-            ></span>
-            <span class="title">UG MAP</span>
-          </a>
-        </li>
-      </ul>
-
-      {% elif student.status == 'COUNSELLOR' %}
-
-      <ul>
-        <li>
-          <a href="{% url 'counsellingUrls:adminPage' pk %}">
-            <span class="icon"
-              ><ion-icon name="people-outline"></ion-icon
-            ></span>
-            <span class="title">Dashboard</span>
-          </a>
-        </li>
-        <li>
-          <a href="{% url 'counsellingUrls:indexPage' pk %}">
-            <span class="icon"><ion-icon name="home-outline"></ion-icon></span>
-            <span class="title">Home</span>
-          </a>
-        </li>
-
-        <li>
-          <a href="{% url 'counsellingUrls:notificationPage' pk %}">
-            <span class="icon"
-              ><ion-icon name="chatbubble-ellipses-outline"></ion-icon>
-            </span>
-            <span class="title">Notifications</span>
-          </a>
-        </li>
-
-        <li>
-          <a href="{% url 'counsellingUrls:profilePage' pk %}">
-            <span class="icon"><ion-icon name="cloud-outline"></ion-icon></span>
-            <span class="title">Profile</span>
-          </a>
-        </li>
-
-        <li>
-          <a
-            href="https://maps.google.com/maps/ms?ie=UTF8&hl=en&msa=0&ll=5.651967,-0.188441&spn=0.005466,0.010042&t=h&z=17&om=1&msid=114140572394999445956.000441bd2615d34504d68&mid=1333430664&showlabs=1"
-          >
-            <span class="icon"
-              ><ion-icon name="navigate-outline"></ion-icon
-            ></span>
-            <span class="title">UG MAP</span>
-          </a>
-        </li>
-      </ul>
-
-      {% else %}
-
-      <ul>
-        <li>
-          <a href="{% url 'counsellingUrls:superadminPage' pk %}">
-            <span class="icon"
-              ><ion-icon name="person-outline"></ion-icon
-            ></span>
-            <span class="title">Admin</span>
-          </a>
-        </li>
-
-        <li>
-          <a href="{% url 'counsellingUrls:adminPage' pk %}">
-            <span class="icon"
-              ><ion-icon name="people-outline"></ion-icon
-            ></span>
-            <span class="title">Dashboard</span>
-          </a>
-        </li>
-        <li>
-          <a href="{% url 'counsellingUrls:indexPage' pk %}">
-            <span class="icon"><ion-icon name="home-outline"></ion-icon></span>
-            <span class="title">Home</span>
-          </a>
-        </li>
-
-        <li>
-          <a href="{% url 'counsellingUrls:notificationPage' pk %}">
-            <span class="icon"
-              ><ion-icon name="chatbubble-ellipses-outline"></ion-icon>
-            </span>
-            <span class="title">Notifications</span>
-          </a>
-        </li>
-
-        <li>
-          <a href="{% url 'counsellingUrls:profilePage' pk %}">
-            <span class="icon"><ion-icon name="cloud-outline"></ion-icon></span>
-            <span class="title">Profile</span>
-          </a>
-        </li>
-
-        <li>
-          <a
-            href="https://maps.google.com/maps/ms?ie=UTF8&hl=en&msa=0&ll=5.651967,-0.188441&spn=0.005466,0.010042&t=h&z=17&om=1&msid=114140572394999445956.000441bd2615d34504d68&mid=1333430664&showlabs=1"
-          >
-            <span class="icon"
-              ><ion-icon name="navigate-outline"></ion-icon
-            ></span>
-            <span class="title">UG MAP</span>
-          </a>
-        </li>
-      </ul>
-
-      {% endif %} {% else %} {% endif %} {% endfor %}
     </div>
 
     {% comment %} <br />
