--- a/counsellingApp/templates/app/list.html
+++ b/counsellingApp/templates/app/list.html
@@ -29,7 +29,7 @@ alt="profile"
 <div class = "col-sm-3"  ><p style="font-weight:bold;margin:0%;width:35%;float:left;">Gender:</p> {{ object.gender}}</div>
 <div class = "col-sm-3"  ><p style="font-weight:bold;margin:0%;width:35%;float:left;">Contact:</p> {{ object.contact}}</div>
 <div class = "col-sm-3"  ><p style="font-weight:bold;margin:0%;width:35%;float:left;">Status:</p> {{ object.status}}</div>
-<div class = "col-sm-3"  ><p style="font-weight:bold;margin:0%;width:35%;float:left;">User ID:</p> {{ object.status}}</div>
+<div class = "col-sm-3"  ><p style="font-weight:bold;margin:0%;width:35%;float:left;">User ID:</p> {{ object.user_id}}</div>
 <div class = "col-sm-5"  ><p style="font-weight:bold;margin:0%;width:19.8%;float:left;">Email:</p> {{ object.email}}</div>
 <div class = "col-sm-7"  ><p style="font-weight:bold;margin:0%;width:20%;float:left;">Occupation:</p> {{ object.occupation}}</div>
 </div></div>
