--- a/counsellingApp/templates/app/counsellors.html
+++ b/counsellingApp/templates/app/counsellors.html
@@ -25,8 +25,8 @@ alt="profile"
 <div style= "width:100%;height:100%;float:left; background:rgba(255,255,255,0.8);border-radius:5px;">
 
 <div class = "col-sm-3" ><p style="font-weight:bold;margin:0%;width:35%;float:left;">Title:</p> {{ object.title}}</div>
+<div class = "col-sm-3" ><p style="font-weight:bold;margin:0%;width:35%;float:left;">User Id:</p> {{ object.user_id}}</div>
 <div class = "col-sm-3" ><p style="font-weight:bold;margin:0%;width:45%;float:left;">Firstname:</p> {{ object.firstName}}</div>
-      
 <div class = "col-sm-3" ><p style="font-weight:bold;margin:0%;width:45%;float:left;">Lastname:</p> {{ object.lastName}}</div>
 <div class = "col-sm-3" ><p style="font-weight:bold;margin:0%;width:35%;float:left;">Gender:</p> {{ object.gender}}</div>
 <div class = "col-sm-3" ><p style="font-weight:bold;margin:0%;width:35%;float:left;">Contact:</p> {{ object.contact}}</div>
