--- a/bookingApp/templates/base.html
+++ b/bookingApp/templates/base.html
@@ -80,8 +80,9 @@
           
           <div class="col-sm-12 col-md">
              <div class="ftco-footer-widget mb-4">
+               <center>
               <img src="{% static "media/University.png" %}" alt="University_of_Ghana_logo"/>
-              
+               </center>
             </div>
           </div>
 
