--- a/bookingApp/templates/contact.html
+++ b/bookingApp/templates/contact.html
@@ -44,7 +44,7 @@
 				        			<span class="fa fa-paper-plane"></span>
 				        		</div>
 				        		<div class="text">
-					            <p><span>Email:</span> <a href="mailto:info@yoursite.com">info@yoursite.com</a></p>
+					            <p><span>Email:</span> <a href="mailto:itservices@ug.edu.gh">itservices@ug.edu.gh</a></p>
 					          </div>
 				          </div>
 								</div>
