--- a/bookingApp/templates/index.html
+++ b/bookingApp/templates/index.html
@@ -274,7 +274,7 @@
 			    					<div class="form-field">
 	          					<div class="select-wrap">
 	                      <div class="icon"><span class="fa fa-chevron-down"></span></div>
-	                      <select name="" id="" class="form-control" name="service">
+	                      <select name="" id="" class="form-control" name="subject">
 	                      	<option value="">Services</option>
 	                        <option value="">Relation Problem</option>
 	                        <option value="">Couple Counseling</option>
