--- a/bookingApp/templates/contact.html
+++ b/bookingApp/templates/contact.html
@@ -63,7 +63,7 @@
 								<div class="col-md-7">
 									<div class="contact-wrap w-100 p-md-5 p-4">
 										<h3 class="mb-4">Contact Us</h3>
-										<form method="POST" id="contactForm" name="contactForm" class="contactForm">
+										<form method="POST" id="contactForm" name="contactForm" class="contactForm" action="{% url 'bookingUrls:send' pk %}">
 											{% csrf_token %}
 											<div class="row">
 												<div class="col-md-6">
@@ -87,7 +87,7 @@
 												<div class="col-md-12">
 													<div class="form-group">
 														<label class="label" for="#">Message</label>
-														<textarea name="message" class="form-control" id="message" cols="30" rows="4" placeholder="Message"></textarea>
+														<textarea name="message" class="form-control" id="msg" cols="30" rows="4" placeholder="Message"></textarea>
 													</div>
 												</div>
 												<div class="col-md-12">
