--- a/bookingApp/templates/index.html
+++ b/bookingApp/templates/index.html
@@ -159,23 +159,24 @@
   				<div class="col-md-4">
 						<ul class="nav nav-pills nav-fill d-md-flex d-block flex-column">
 						  <li class="nav-item text-left">
-						    <a class="nav-link active py-4" data-toggle="tab" href="#services-1">Academic Problem</a>
+						    <a class="nav-link active py-4" data-toggle="tab" href="#services-1">Academic Counselling</a>
 						  </li>
 						  <li class="nav-item text-left">
-						    <a class="nav-link py-4" data-toggle="tab" href="#services-2">Relationship Counseling</a>
+						    <a class="nav-link py-4" data-toggle="tab" href="#services-2">Preventive Counselling</a>
 						  </li>
 						  <li class="nav-item text-left">
-						    <a class="nav-link py-4" data-toggle="tab" href="#services-3">Depression Treatment</a>
+						    <a class="nav-link py-4" data-toggle="tab" href="#services-3">Vocational / Career Counselling</a>
 						  </li>
 						  <li class="nav-item text-left">
-						    <a class="nav-link py-4" data-toggle="tab" href="#services-4">Family Problem</a>
+						    <a class="nav-link py-4" data-toggle="tab" href="#services-4">Relationship Counselling</a>
 						  </li>
 						  <li class="nav-item text-left">
-						    <a class="nav-link py-4" data-toggle="tab" href="#services-5">Personal Problem</a>
+						    <a class="nav-link py-4" data-toggle="tab" href="#services-5">Grief Counselling</a>
 						  </li>
 						  <li class="nav-item text-left">
-						    <a class="nav-link py-4" data-toggle="tab" href="#services-6">Financial Problem</a>
+						    <a class="nav-link py-4" data-toggle="tab" href="#services-6">Behavioral Counselling</a>
 						  </li>
+						  
 						</ul>
 					</div>
 					<div class="col-md-8">
@@ -187,34 +188,118 @@
 						  </div>
 						  <div class="tab-pane container p-0 fade" id="services-2">
 						  	<div class="img" style="background-image: url({% static 'images/admissionsHomePage.png'%});"></div>
-						  	<h3><a href="#">Couples Counseling</a></h3>
+						  	<h3><a href="#">Preventive Counselling</a></h3>
 						  	<p></p>
 						  </div>
 						  <div class="tab-pane container p-0 fade" id="services-3">
 						  	<div class="img" style="background-image: url({% static 'images/untitled.png'%});"></div>
-						  	<h3><a href="#">Depression Treatment</a></h3>
+						  	<h3><a href="#">Vocational / Career Counselling</a></h3>
 						  	<p></p>
 						  </div>
 						  <div class="tab-pane container p-0 fade" id="services-4">
 						  	<div class="img" style="background-image: url({% static 'images/university-of-ghana-legon.webp'%});"></div>
-						  	<h3><a href="#">Family Problems</a></h3>
+						  	<h3><a href="#">Relationship Counselling</a></h3>
 						  	<p></p>
 						  </div>
 						  <div class="tab-pane container p-0 fade" id="services-5">
 						  	<div class="img" style="background-image: url({% static 'images/gate.jpg'%});"></div>
-						  	<h3><a href="#">Personal Problem</a></h3>
+						  	<h3><a href="#">Grief Counselling</a></h3>
 						  	<p></p>
 						  </div>
+						
+
 						  <div class="tab-pane container p-0 fade" id="services-6">
 						  	<div class="img" style="background-image: url({% static 'images/legon.jfif'%});"></div>
-						  	<h3><a href="#">Financial Problem</a></h3>
+						  	<h3><a href="#">Behavioral Counselling</a></h3>
 						  	<p></p>
 						  </div>
+						   
 						</div>
 					</div>
-				</div>
+					</div>
 			</div>
 		</section>
+
+
+
+<!---->
+<section class="ftco-section">
+			<div class="container">
+				
+				<div class="row tabulation mt-4 ftco-animate">
+  				<div class="col-md-4">
+						<ul class="nav nav-pills nav-fill d-md-flex d-block flex-column">
+						  <li class="nav-item text-left">
+						    <a class="nav-link py-4" data-toggle="tab" href="#services-7">Psychometric Assessment</a>
+						  </li>
+						  <li class="nav-item text-left">
+						    <a class="nav-link py-4" data-toggle="tab" href="#services-8">Family Therapy</a>
+						  </li>
+						  <li class="nav-item text-left">
+						    <a class="nav-link py-4" data-toggle="tab" href="#services-9">Assessment and Management of learning disorders</a>
+						  </li>
+						  <li class="nav-item text-left">
+						    <a class="nav-link py-4" data-toggle="tab" href="#services-10">Assessment and Management of Obsessive - Compulsive Disorders</a>
+						  </li>
+						  <li class="nav-item text-left">
+						    <a class="nav-link py-4" data-toggle="tab" href="#services-11">Stress Management</a>
+						  </li>
+						  <li class="nav-item text-left">
+						    <a class="nav-link py-4" data-toggle="tab" href="#services-12">Treatment and management of depression, anxiety </a>
+						  </li>
+						  <li class="nav-item text-left">
+						    <a class="nav-link py-4" data-toggle="tab" href="#services-13">Psycho-therapy</a>
+						  </li>
+						</ul>
+					</div>
+					<div class="col-md-8">
+						<div class="tab-content">
+						  	<div class="tab-pane container p-0 fade" id="services-7">
+						  	<div class="img" style="background-image: url({% static 'images/legon.jfif'%});"></div>
+						  	<h3><a href="#">Psychometric Assessment</a></h3>
+						  	<p></p>
+						  </div>
+						  <div class="tab-pane container p-0 fade" id="services-8">
+						  	<div class="img" style="background-image: url({% static 'images/legon.jfif'%});"></div>
+						  	<h3><a href="#">Family Therapy</a></h3>
+						  	<p></p>
+						  </div>
+						  <div class="tab-pane container p-0 fade" id="services-9">
+						  	<div class="img" style="background-image: url({% static 'images/legon.jfif'%});"></div>
+						  	<h3><a href="#">Assessment and Management of learning disorders</a></h3>
+						  	<p></p>
+						  </div>
+						  <div class="tab-pane container p-0 fade" id="services-10">
+						  	<div class="img" style="background-image: url({% static 'images/legon.jfif'%});"></div>
+						  	<h3><a href="#">Assessment and Management of Obsessive - Compulsive Disorders</a></h3>
+						  	<p></p>
+						  </div>
+						   <div class="tab-pane container p-0 fade" id="services-11">
+						  	<div class="img" style="background-image: url({% static 'images/legon.jfif'%});"></div>
+						  	<h3><a href="#">Stress Management</a></h3>
+						  	<p></p>
+						  </div>
+						
+
+						   <div class="tab-pane container p-0 fade" id="services-12">
+						  	<div class="img" style="background-image: url({% static 'images/legon.jfif'%});"></div>
+						  	<h3><a href="#">Treatment and management of depression, anxiety</a></h3>
+						  	<p></p>
+						  </div>
+
+						   <div class="tab-pane container p-0 fade" id="services-13">
+						  	<div class="img" style="background-image: url({% static 'images/legon.jfif'%});"></div>
+						  	<h3><a href="#">Psycho-therapy</a></h3>
+						  	<p></p>
+						  </div>
+						   
+						</div>
+					</div>
+					</div>
+			</div>
+		</section>
+
+
 
   
     <section class="ftco-section testimony-section">
@@ -275,14 +360,23 @@
 	          					<div class="select-wrap">
 	                      <div class="icon"><span class="fa fa-chevron-down"></span></div>
 	                      <select name="" id="" class="form-control" name="subject">
-	                      	<option value="">Services</option>
-	                        <option value="">Relation Problem</option>
-	                        <option value="">Couple Counseling</option>
-	                        <option value="">Depression Treatment</option>
-	                        <option value="">Family Problem</option>
-	                        <option value="">Personal Problem</option>
-	                        <option value="">Business Problem</option>
-	                      </select>
+	                      	<option value="">Preventive Counselling</option>
+	                        <option value="">Academic Counselling</option>
+	                        <option value="">Vocational / Career Counselling</option>
+	                        <option value="">Relationship Counselling</option>
+	                        <option value="">Grief Counselling</option>
+	                        <option value="">Behavioral Counselling</option>
+	                        <option value="">Psychometric Assessment</option>
+	                    	<option value="">Family Therapy</option>
+	                        <option value="">Assessment and Management of learning disorders</option>
+	                        <option value="">Assessment and Management of Obsessive - Compulsive Disorders</option>
+	                        <option value="">Stress Management </option>
+	                        <option value="">Treatment and management of depression, anxiety </option>
+	                        <option value="">Psycho-therapy </option>
+
+						
+						
+						</select>
 	                    </div>
 			              </div>
 			    				</div>
