--- a/counsellingApp/templates/app/assets/main.css
+++ b/counsellingApp/templates/app/assets/main.css
@@ -265,7 +265,7 @@ font-family: "Open Sans", sans-serif;
     background-size: cover;
     background-repeat: no-repeat;
     background:#FAFAFA; {% endcomment %}
-background-color: #e5e5f7;
+background-color:white;
 
    display: block;
     width: 100%;
